# c_cpp_vscode

./: CMakeLists.txt  README.md
include/: lib_test.h
src/: cmake_test.cpp  lib_test.cpp
